kubernetes/nginx-scrape-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-prom-metrics
  namespace: ingress-nginx
spec:
  ports:
  - name: svc-prometheus
    port: 9901
    protocol: TCP
    targetPort: 9901
  selector:
    app.kubernetes.io/name: nginx-ingress
  type: ClusterIP
